// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en el <GifGrid /> debe mostrar items cuando se cargan imágenes con useFecthGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="test"
      url="https://test"
    />
  </div>
</Fragment>
`;

exports[`pruebas en el <GifGrid /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
